--- a/Earthquake_Data_Team3/src/EarthquakeData.fxml
+++ b/Earthquake_Data_Team3/src/EarthquakeData.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="340.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="EarthquakeDataController">
+<AnchorPane prefHeight="340.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EarthquakeDataController">
    <children>
       <Button fx:id="help" layoutX="53.0" layoutY="38.0" mnemonicParsing="false" onAction="#helpButtonClick" text="Help" />
       <Button fx:id="summary" layoutX="41.0" layoutY="92.0" mnemonicParsing="false" onAction="#summaryButtonClick" text="Summary" />
