--- a/Earthquake_Data_Team3/src/EarthquakeData.fxml
+++ b/Earthquake_Data_Team3/src/EarthquakeData.fxml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="340.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="EarthquakeDataController">
+<AnchorPane prefHeight="576.0" prefWidth="912.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainWindowController">
    <children>
-      <Button fx:id="help" layoutX="53.0" layoutY="38.0" mnemonicParsing="false" onAction="#helpButtonClick" text="Help" />
-      <Button fx:id="summary" layoutX="41.0" layoutY="92.0" mnemonicParsing="false" onAction="#summaryButtonClick" text="Summary" />
-      <Button fx:id="print" layoutX="54.0" layoutY="145.0" mnemonicParsing="false" onAction="#printButtonClick" text="Print" />
-      <Button fx:id="printby" layoutX="48.0" layoutY="209.0" mnemonicParsing="false" onAction="#printByButtonClick" text="PrintBy" />
-      <Button fx:id="search" layoutX="48.0" layoutY="274.0" mnemonicParsing="false" onAction="#searchButtonClick" text="Search" />
-      <TextArea fx:id="textArea" layoutX="221.0" layoutY="70.0" prefHeight="200.0" prefWidth="200.0" />
-      <Label fx:id="textLabel" layoutX="302.0" layoutY="42.0" text="Output" />
-      <Label fx:id="title" layoutX="169.0" layoutY="14.0" text="Earthquake Data">
+      <Rectangle fill="#5e594e" height="119.0" layoutX="-1.0" layoutY="-1.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" width="913.0" />
+      <Button fx:id="help" layoutX="38.0" layoutY="36.0" mnemonicParsing="false" onAction="#helpAction" prefHeight="53.0" prefWidth="112.0" text="Need help?" />
+      <Button fx:id="dataSummary" layoutX="102.0" layoutY="203.0" mnemonicParsing="false" onAction="#dataSummaryAction" prefHeight="53.0" prefWidth="313.0" text="Data Summary" />
+      <TextArea fx:id="output" layoutX="492.0" layoutY="134.0" prefHeight="427.0" prefWidth="332.0" wrapText="true" />
+      <Button fx:id="allEvents" layoutX="100.0" layoutY="290.0" mnemonicParsing="false" onAction="#allEventsAction" prefHeight="53.0" prefWidth="314.0" text="All events" />
+      <Button fx:id="Search" layoutX="100.0" layoutY="390.0" mnemonicParsing="false" onAction="#searchByAction" prefHeight="143.0" prefWidth="96.0" text="Search by" />
+      <Label layoutX="327.0" layoutY="30.0" text="Searchquake™" textFill="WHITE">
          <font>
-            <Font size="17.0" />
-         </font></Label>
+            <Font name="Helvetica" size="50.0" />
+         </font>
+      </Label>
+      <ChoiceBox fx:id="searchDrop" layoutX="226.0" layoutY="411.0" prefHeight="27.0" prefWidth="187.0" />
+      <TextField fx:id="searchText" layoutX="225.0" layoutY="460.0" prefHeight="27.0" prefWidth="193.0" />
+      <Label layoutX="226.0" layoutY="441.0" prefHeight="17.0" prefWidth="62.0" text="Criteria 1" />
+      <TextField fx:id="searchText2" layoutX="226.0" layoutY="509.0" prefHeight="27.0" prefWidth="193.0" />
+      <Label layoutX="227.0" layoutY="491.0" prefHeight="17.0" prefWidth="62.0" text="Criteria 2" />
+      <Label layoutX="226.0" layoutY="390.0" prefHeight="17.0" prefWidth="62.0" text="Select a " />
    </children>
 </AnchorPane>
