--- a/Earthquake_Data_Team3/src/EarthquakeData.fxml
+++ b/Earthquake_Data_Team3/src/EarthquakeData.fxml
@@ -34,6 +34,6 @@
       <Label layoutX="226.0" layoutY="382.0" prefHeight="17.0" prefWidth="62.0" text="Select a " />
       <Button fx:id="selectionOut" layoutX="101.0" layoutY="582.0" mnemonicParsing="false" onAction="#selectionOutAction" prefHeight="53.0" prefWidth="314.0" text="Convert selection to text file" />
       <Button fx:id="allOut" layoutX="102.0" layoutY="670.0" mnemonicParsing="false" onAction="#allOutAction" prefHeight="53.0" prefWidth="314.0" text="Convert entire set to text file" />
-      <GoogleMapView fx:id="mapView" layoutX="475.0" layoutY="399.0" onDragDetected="#mapViewAction" prefHeight="342.0" prefWidth="674.0" />
+      <GoogleMapView fx:id="mapView" layoutX="475.0" layoutY="399.0" prefHeight="342.0" prefWidth="674.0" />
    </children>
 </AnchorPane>
