--- a/Earthquake_Data_Team3/src/EarthquakeData.fxml
+++ b/Earthquake_Data_Team3/src/EarthquakeData.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+<AnchorPane prefHeight="800.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#b9af87" height="199.0" layoutX="72.0" layoutY="152.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" width="368.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#796b52" height="199.0" layoutX="72.0" layoutY="549.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" width="368.0" />
@@ -19,19 +24,20 @@
       <Button fx:id="dataSummary" layoutX="102.0" layoutY="174.0" mnemonicParsing="false" onAction="#dataSummaryAction" prefHeight="53.0" prefWidth="313.0" text="Data Summary" />
       <TextArea fx:id="output" layoutX="475.0" layoutY="149.0" prefHeight="235.0" prefWidth="674.0" wrapText="true" />
       <Button fx:id="allEvents" layoutX="100.0" layoutY="268.0" mnemonicParsing="false" onAction="#allEventsAction" prefHeight="53.0" prefWidth="314.0" text="All events" />
-      <Button fx:id="Search" layoutX="100.0" layoutY="386.0" mnemonicParsing="false" onAction="#searchByAction" prefHeight="143.0" prefWidth="96.0" text="Search by" />
+      <Button fx:id="searchBy" layoutX="93.0" layoutY="379.0" mnemonicParsing="false" onAction="#searchByAction" prefHeight="64.0" prefWidth="112.0" text="Search by" />
       <Label layoutX="449.0" layoutY="26.0" text="Searchquake™" textFill="WHITE">
          <font>
             <Font name="Helvetica" size="50.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="searchDrop" layoutX="226.0" layoutY="403.0" prefHeight="27.0" prefWidth="187.0" />
-      <TextField fx:id="searchText" layoutX="225.0" layoutY="452.0" prefHeight="27.0" prefWidth="193.0" />
-      <Label layoutX="226.0" layoutY="433.0" prefHeight="17.0" prefWidth="62.0" text="Criteria 1" />
-      <TextField fx:id="searchText2" layoutX="226.0" layoutY="501.0" prefHeight="27.0" prefWidth="193.0" />
-      <Label layoutX="227.0" layoutY="483.0" prefHeight="17.0" prefWidth="62.0" text="Criteria 2" />
-      <Label layoutX="226.0" layoutY="382.0" prefHeight="17.0" prefWidth="62.0" text="Select a " />
+      <ChoiceBox fx:id="searchDrop" layoutX="226.0" layoutY="398.0" prefHeight="27.0" prefWidth="187.0" />
+      <TextField fx:id="searchText" layoutX="225.0" layoutY="447.0" prefHeight="27.0" prefWidth="193.0" />
+      <Label layoutX="226.0" layoutY="428.0" prefHeight="17.0" prefWidth="62.0" text="Criteria 1" />
+      <TextField fx:id="searchText2" layoutX="226.0" layoutY="496.0" prefHeight="27.0" prefWidth="193.0" />
+      <Label layoutX="227.0" layoutY="478.0" prefHeight="17.0" prefWidth="62.0" text="Criteria 2" />
+      <Label layoutX="226.0" layoutY="377.0" prefHeight="17.0" prefWidth="62.0" text="Select a " />
       <Button fx:id="selectionOut" layoutX="101.0" layoutY="582.0" mnemonicParsing="false" onAction="#selectionOutAction" prefHeight="53.0" prefWidth="314.0" text="Convert selection to text file" />
       <Button fx:id="allOut" layoutX="102.0" layoutY="670.0" mnemonicParsing="false" onAction="#allOutAction" prefHeight="53.0" prefWidth="314.0" text="Convert entire set to text file" />
+      <Button fx:id="printBy" layoutX="93.0" layoutY="460.0" mnemonicParsing="false" onAction="#printByAction" prefHeight="64.0" prefWidth="112.0" text="Print by" />
    </children>
 </AnchorPane>
