Added JAR files, build path and implemented map with settings

--- a/Earthquake_Data_Team3/src/EarthquakeData.fxml
+++ b/Earthquake_Data_Team3/src/EarthquakeData.fxml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import com.lynden.gmapsfx.GoogleMapView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -14,7 +10,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+<AnchorPane prefHeight="800.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#b9af87" height="199.0" layoutX="72.0" layoutY="152.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" width="368.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#796b52" height="199.0" layoutX="72.0" layoutY="549.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" width="368.0" />
@@ -39,5 +35,6 @@
       <Button fx:id="selectionOut" layoutX="101.0" layoutY="582.0" mnemonicParsing="false" onAction="#selectionOutAction" prefHeight="53.0" prefWidth="314.0" text="Convert selection to text file" />
       <Button fx:id="allOut" layoutX="102.0" layoutY="670.0" mnemonicParsing="false" onAction="#allOutAction" prefHeight="53.0" prefWidth="314.0" text="Convert entire set to text file" />
       <Button fx:id="printBy" layoutX="93.0" layoutY="460.0" mnemonicParsing="false" onAction="#printByAction" prefHeight="64.0" prefWidth="112.0" text="Print by" />
+      <GoogleMapView fx:id="mapView" layoutX="476.0" layoutY="406.0" prefHeight="342.0" prefWidth="674.0" />
    </children>
 </AnchorPane>
