--- a/Earthquake_Data_Team3/src/FileSaveWindow.fxml
+++ b/Earthquake_Data_Team3/src/FileSaveWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fileSaveWindowController.java">
+<AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FileSaveWindowController">
    <children>
       <Button fx:id="saveButton" layoutX="262.0" layoutY="232.0" mnemonicParsing="false" onAction="#saveButtonAction" prefHeight="54.0" prefWidth="181.0" text="Save">
          <font>
