--- a/Earthquake_Data_Team3/src/HelpWindow.fxml
+++ b/Earthquake_Data_Team3/src/HelpWindow.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="helpWindowController.java">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HelpWindowController">
    <children>
       <Button fx:id="closeButton" layoutX="173.0" layoutY="424.0" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="54.0" prefWidth="154.0" text="Close">
          <font>
