--- a/Earthquake_Data_Team3/src/EarthquakeData.fxml
+++ b/Earthquake_Data_Team3/src/EarthquakeData.fxml
@@ -43,5 +43,10 @@
             <Font size="22.0" />
          </font>
       </Label>
+      <Label fx:id="numText" layoutX="902.0" layoutY="80.0" prefHeight="32.0" prefWidth="248.0" text="Loading..." textAlignment="CENTER" textFill="#b9af87">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
