--- a/Earthquake_Data_Team3/src/HelpWindow.fxml
+++ b/Earthquake_Data_Team3/src/HelpWindow.fxml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HelpWindowController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HelpWindowController">
    <children>
-      <Button fx:id="closeButton" layoutX="173.0" layoutY="424.0" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="54.0" prefWidth="154.0" text="Close">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5e594e" height="81.0" layoutY="-1.0" stroke="#f0e1e100" strokeType="INSIDE" strokeWidth="0.0" width="500.0" />
+      <Button fx:id="closeButton" layoutX="173.0" layoutY="419.0" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="54.0" prefWidth="154.0" text="Close">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Label alignment="CENTER" layoutX="157.0" layoutY="14.0" prefHeight="69.0" prefWidth="186.0" text="Help Window">
+      <Label alignment="CENTER" layoutX="68.0" layoutY="5.0" prefHeight="69.0" prefWidth="364.0" text="Searchquake Help" textFill="WHITE">
          <font>
-            <Font size="24.0" />
+            <Font size="40.0" />
          </font>
       </Label>
-      <Label fx:id="helpTextLabel" alignment="TOP_LEFT" layoutX="44.0" layoutY="92.0" prefHeight="317.0" prefWidth="412.0" text="Label">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
+      <TextArea fx:id="helpText" layoutX="41.0" layoutY="103.0" prefHeight="301.0" prefWidth="418.0" />
    </children>
 </AnchorPane>
